@@ -37,6 +37,11 @@
       </dependency>
       <dependency>
          <groupId>org.infinispan</groupId>
+         <artifactId>infinispan-tasks-api</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.infinispan</groupId>
          <artifactId>infinispan-cli-client</artifactId>
          <scope>test</scope>
          <exclusions>
@@ -60,20 +65,8 @@
       </dependency>
       <dependency>
          <groupId>org.infinispan</groupId>
-         <artifactId>infinispan-server-rest</artifactId>
-         <type>test-jar</type>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.infinispan</groupId>
          <artifactId>infinispan-server-testdriver-junit5</artifactId>
          <scope>test</scope>
-         <exclusions>
-            <exclusion>
-               <groupId>org.infinispan</groupId>
-               <artifactId>infinispan-server-runtime</artifactId>
-            </exclusion>
-         </exclusions>
       </dependency>
       <dependency>
          <groupId>org.infinispan</groupId>
@@ -108,6 +101,11 @@
       <dependency>
          <groupId>org.assertj</groupId>
          <artifactId>assertj-core</artifactId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.logging.log4j</groupId>
+         <artifactId>log4j-slf4j-impl</artifactId>
          <scope>test</scope>
       </dependency>
    </dependencies>
@@ -155,7 +153,11 @@
                      <argLine>-Dorg.infinispan.test.server.driver=CONTAINER</argLine>
                      <systemPropertyVariables>
                         <infinispan.cluster.stack>tcp</infinispan.cluster.stack>
+                        <infinispan.server.log.path>${project.build.directory}</infinispan.server.log.path>
                         <org.infinispan.test.server.dir>${project.basedir}/../../server/runtime/target/${infinispan.brand.prefix}-server-${infinispan.brand.version}</org.infinispan.test.server.dir>
+                        <log4j.configurationFile>${project.basedir}/../../server/tests/target/test-classes/configuration/log4j2.xml</log4j.configurationFile>
+                        <log4j2.contextSelector>org.apache.logging.log4j.core.selector.BasicContextSelector</log4j2.contextSelector>
+                        <java.util.logging.manager>org.apache.logging.log4j.jul.LogManager</java.util.logging.manager>
                      </systemPropertyVariables>
                   </configuration>
                </plugin>
