@@ -181,41 +181,42 @@ public final class SearchQueryMaker<TypeMetadata> implements Visitor<PredicateFi
       var aggregationFactory = scope.aggregation();
       String aggFieldName = aggregationPropertyPath.asStringPathWithoutAlias();
       switch (aggregationPropertyPath.getAggregationFunction()) {
-          case COUNT -> {
-              if (aggFieldName == null || aggFieldName.isEmpty()) {
-                  // Count(*)
-                  searchAggregation = aggregationFactory.terms()
-                          .field(groupByFieldName, projectedType)
-                          .value(aggregationFactory.count().documents())
-                          .toAggregation();
-              } else {
-                  searchAggregation = aggregationFactory.terms()
-                          .field(groupByFieldName, projectedType)
-                          .value(aggregationFactory.count().field(aggFieldName))
-                          .toAggregation();
-              }
-          }
-          case SUM -> searchAggregation = aggregationFactory.terms()
-                  .field(groupByFieldName, projectedType)
-                  .value(aggregationFactory.sum().field(aggFieldName, Object.class))
-                  .toAggregation();
+         case COUNT -> {
+            if (aggFieldName == null || aggFieldName.isEmpty()) {
+               // Count(*)
+               searchAggregation = aggregationFactory.terms()
+                     .field(groupByFieldName, projectedType)
+                     .value(aggregationFactory.count().documents())
+                     .toAggregation();
+            } else {
+               searchAggregation = aggregationFactory.terms()
+                     .field(groupByFieldName, projectedType)
+                     .value(aggregationFactory.count().field(aggFieldName))
+                     .toAggregation();
+            }
+         }
+         case SUM -> searchAggregation = aggregationFactory.terms()
+               .field(groupByFieldName, projectedType)
+               .value(aggregationFactory.sum().field(aggFieldName, Object.class))
+               .toAggregation();
 
-          case MAX -> searchAggregation = aggregationFactory.terms()
-                  .field(groupByFieldName, projectedType)
-                  .value(aggregationFactory.max().field(aggFieldName, Object.class))
-                  .toAggregation();
+         case MAX -> searchAggregation = aggregationFactory.terms()
+               .field(groupByFieldName, projectedType)
+               .value(aggregationFactory.max().field(aggFieldName, Object.class))
+               .toAggregation();
 
-          case MIN -> searchAggregation = aggregationFactory.terms()
-                  .field(groupByFieldName, projectedType)
-                  .value(aggregationFactory.min().field(aggFieldName, Object.class))
-                  .toAggregation();
+         case MIN -> searchAggregation = aggregationFactory.terms()
+               .field(groupByFieldName, projectedType)
+               .value(aggregationFactory.min().field(aggFieldName, Object.class))
+               .toAggregation();
 
-          case AVG -> searchAggregation = aggregationFactory.terms()
-                  .field(groupByFieldName, projectedType)
-                  .value(aggregationFactory.avg().field(aggFieldName, Object.class))
-                  .toAggregation();
+         case AVG -> searchAggregation = aggregationFactory.terms()
+               .field(groupByFieldName, projectedType)
+               .value(aggregationFactory.avg().field(aggFieldName, Object.class))
+               .toAggregation();
 
-          default -> throw new UnsupportedOperationException("Query aggregation not supported " + aggregationPropertyPath.getAggregationFunction().name());
+         default ->
+               throw new UnsupportedOperationException("Query aggregation not supported " + aggregationPropertyPath.getAggregationFunction().name());
       }
       return new InfinispanAggregation(searchAggregation, aggregationPropertyPath, displayGroupFirst);
    }
