@@ -83,7 +83,7 @@ public class ClusteredRollingUpgradeIT extends InfinispanSuite {
    static {
       RollingUpgradeConfigurationBuilder builder = new RollingUpgradeConfigurationBuilder(ClusteredRollingUpgradeIT.class.getName(),
             RollingUpgradeTestUtil.getFromVersion(), RollingUpgradeTestUtil.getToVersion())
-            // ClusterIT only currently passes with just 2 nodes.. some tests aren't testing serialization and other things
+            // ClusterIT only currently passes with just 2 nodes... some tests aren't testing serialization and other things
             .nodeCount(2)
             .useCustomServerConfiguration("configuration/ClusteredServerTest.xml")
             .addMavenArtifacts(ClusteredIT.mavenArtifacts())
